Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Include the place holder text "Enter Email" and make this input required -->
       </div>
       <div><!-- Add a label for 'phone'-->
-        <label for="Phone">Phone</label>
+        <label for="phone">Phone</label>
         <input type="tel" name="phone" id="phone" placeholder="Enter Telephone">
         <!-- Add a telephone input with the id and name attributes set to 'phone' -->
         <!-- Include the place holder text "Enter Telephone (optional)" -->
