--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div><!-- Add a label for 'phone'-->
         <label for="phone">Phone</label>
-        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone">
+        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
         <!-- Add a telephone input with the id and name attributes set to 'phone' -->
         <!-- Include the place holder text "Enter Telephone (optional)" -->
       </div>
