--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form>
       <div>
         <!-- Add a label for 'fullname'-->
-          <label for="name">Fullname</label>
+          <label for="name">fullname</label>
           <!-- Add a text input with the id and name attributes set to 'fullname' -->
           <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required>
           <!-- Include the place holder text "Enter Name" and make this input required -->
