--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div>
         <!-- Add a label for 'email'-->
-        <label for="Email">Email</label>
+        <label for="email">email</label>
          <!-- Add a email input with the id and name attributes set to 'email' -->
         `<input type="email" name="email" id="email" placeholder="Enter Email" required>
       <!-- Include the place holder text "Enter Email" and make this input required -->
